[package]
name = "rusty-nes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
image = "0.24.7"
show-image = "0.13.1"
eframe = "0.22.0"
egui_extras = "0.22.0"

[dependencies.iced]
version = "0.10.0"
default-features=false
features = ["image", "smol"]
