[package]
name = "rusty-nes"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
image = "0.24.7"
show-image = "0.13.1"

[dependencies.iced]
version = "0.13.1"
default-features=false
features = ["image", "smol", "wgpu"]
